# BoomingMusic

./: .gitignore  CONTRIBUTING.md  PERMISSIONS.md  README.md  crowdin.yml  gradle.properties  public.properties  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: android.yml  release.yml
alacdecoder/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
alacdecoder/src/main/cpp/: CMakeLists.txt  booming_alac.cpp
alacdecoder/src/main/cpp/libalac/: ALACDecoder.cpp  EndianPortable.c  ag_dec.c  matrix_dec.c
app/: .gitignore  build.gradle.kts  proguard-rules.pro
config/libraries/: libalac.json
gradle/: libs.versions.toml
metadata/ca-ES/: full_description.txt  short_description.txt
metadata/de-DE/: full_description.txt
metadata/el-GR/: short_description.txt
metadata/en-US/: full_description.txt
metadata/es/: full_description.txt  short_description.txt
metadata/es-419/: full_description.txt
metadata/es-ES/: full_description.txt
metadata/es-US/: full_description.txt  short_description.txt
metadata/et/: full_description.txt  short_description.txt
metadata/fa-IR/: full_description.txt  short_description.txt
metadata/fi-FI/: short_description.txt
metadata/fil/: full_description.txt
metadata/fr-FR/: full_description.txt  short_description.txt
metadata/he/: short_description.txt
metadata/id-ID/: full_description.txt  short_description.txt
metadata/it-IT/: full_description.txt
properties/: base.properties  fdroid.properties  playstore.properties
(+570 files in other folders)
